samples/_failures_safe/1761731643_2df205_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fecb6114.c: In function ‘main’:
./samples/SAFE/__tmp_fecb6114.c:172:5: error: expected expression at end of input
  172 |     if (!read_matrix(mat2))
      |     ^~
./samples/SAFE/__tmp_fecb6114.c:172:5: error: expected declaration or statement at end of input
